[tool.poetry]
name = "photo-date-tagger"
version = "0.0.1"
description = "Tool to rename film photos based on their date."
authors = ["First Last <name@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
torchvision = "^0.18.0"
easyocr = "^1.7.1"

[tool.poetry.dev-dependencies]
autoflake = "^2.2.1"
isort = "^5.13.2"
black = "^24.2.0"
mypy = "^1.8.0"
pylint = "^3.0.3"
pre-commit = "^3.6.1"

[tool.poetry.scripts]
check-photo-dates = "photo_date_tagger.photo_date_tag:check_photo_dates"
rename-photos = "photo_date_tagger.photo_date_tag:rename_photos"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
  | \.git
  | __pycache__
  | \.tox
  | \venv
  | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [
  '*.parquet'
]
filter_files = true
skip_gitignore = true

[tool.mypy]
exclude = [
  '\.yaml$',
  '\.yml$',
  '\.toml$',
  '\.venv'
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"